--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,7 @@
 <body>
      <table align="center" style="width:80%">
         <tr style="background-color:pink;font-size:30px">
-            <th><a href="page1.html">Home</a></th>
+            <th><a href="index.html">Home</a></th>
             <th><a href="page2.html">Gallery</a></th>
             <th><a href="page3.html">Contact</a></th>
         </tr>
