--- a/page3.html
+++ b/page3.html
@@ -38,7 +38,7 @@
             </td>
         </tr>
         <tr>
-            <td><h2>Message:</h2></td>
+            <td><h2>Massage:</h2></td>
             <td>
                 <form>
                     <textarea namae="Message"></textarea>
